# sguwork-sealgo

analyses/: conf.typ
analyses/task1/: main.typ
analyses/task2/: main.typ
analyses/task3/: main.typ
analyses/task4/: main.typ
analyses/task5/: main.typ
analyses/task6/: bmh.typ  prefix-z-and-kmp.typ
practice/counting-sort/: countsort.cpp  justfile
practice/heap-sort/: heapsort.cpp  heapsort.py  justfile
practice/merge-sort/: justfile  mergesort.cpp  mergesort2.cpp
practice/quick-sort/: justfile  quicksort.cpp
practice/radix-sort-lsd/: justfile  radixlsd.cpp
practice/task2/: report.py
practice/task2/heap-sort/: heapsort.cpp
practice/task2/merge-sort/: mergesort.cpp
practice/task2/quick-sort/: quicksort.cpp
practice/task3/: .clang-tidy  aboba.txt  bintree.cpp  justfile
practice/task4/: CMakeLists.txt
practice/task4/src/: main.cpp  tree.hpp
practice/task4/static/: index.html  tracer.html  tree-visualizer.js
practice/task4/tests/: CMakeLists.txt  test_tree.cpp
practice/task5/: CMakeLists.txt
practice/task5/src/: avl-tree.hpp  main.cpp
practice/task6/: CMakeLists.txt
practice/task6/cmd/: bmh-search.cpp  functions.cpp  kmp-search.cpp
practice/task6/internal/: bmh.hpp  kmp.hpp  prefix-func.hpp  print-vec.hpp
practice/task6/src/: main.cpp  z-func.hpp
